<resources>
    <string name="app_name">Popular Movies by FF</string>
    <string name="movie_details_activity_title">Movie Details</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->
    <string name="pref_view_by">View Movies By</string>
    <string-array name="pref_sort_by_options">
        <item>Popular</item>
        <item>Top Rated</item>
        <item>Favorites</item>
    </string-array>
    <string-array name="pref_sort_by_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>
    <string name="app_title_popular">Popular Movies by FF</string>
    <string name="app_title_top">Top Movies by FF</string>
    <string name="app_title_favorites">Favorite Movies by FF</string>

    <!-- Strings related to Movie Detail activity -->
    <string name="synopsis_label">Synopsis</string>
    <string name="avg_rate_label">Rate:</string>
    <string name="rel_date_label">Rel.:</string>
    <string name="avg_rate_label_on_details">Average Rating:</string>
    <string name="rel_date_label_on_details">Release Date:</string>
    <string name="detail_movie_poster_image_content_description">Movie Poster</string>
    <string name="error_message_text">Oops!!\n\nSomething went wrong.\nSorry for the inconvenient!\n\nPlease restart the app,\nor choose other Sorting Option.</string>
    <string name="no_internet_connection_error_msg">No internet connection found!\nPlease make sure that you have an internet connection available.</string>
    <string name="trailers_label">Trailers</string>
    <string name="reviews_label">Reviews</string>
    <string name="reviewer_label">Reviewer:</string>
    <string name="button_more">More…</string>
    <string name="no_trailers_available">Oh no!\nNo trailers available for this movie!</string>
    <string name="no_reviews_available">Oops!\nNo reviews available for this movie!</string>
</resources>
