<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context="com.ferfig.popularmovies.MovieDetails">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:textAllCaps="true"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textColor="@android:color/white"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Shawshank Redemption"/>

        <ImageView
            android:id="@+id/ivPoster"
            android:layout_width="210dp"
            android:layout_height="315dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/detail_movie_poster_image_content_description"
            app:layout_constraintStart_toStartOf="@+id/tvTitle"
            app:layout_constraintTop_toBottomOf="@+id/tvTitle"
            app:srcCompat="@android:color/darker_gray"/>

        <TextView
            android:id="@+id/tvRelDateLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/rel_date_label"
            android:textColor="@color/colorPrimaryDark"
            app:layout_constraintStart_toEndOf="@+id/ivPoster"
            app:layout_constraintTop_toBottomOf="@+id/tvTitle"/>

        <TextView
            android:id="@+id/tvRelDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textColor="@color/colorAccent"
            app:layout_constraintBottom_toTopOf="@+id/tvRelDateLabel"
            app:layout_constraintStart_toEndOf="@+id/tvRelDateLabel"
            app:layout_constraintTop_toBottomOf="@+id/tvRelDateLabel"
            tools:text="1994/01/13"/>

        <TextView
            android:id="@+id/tvAvgRateLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/avg_rate_label"
            android:textColor="@color/colorPrimaryDark"
            app:layout_constraintStart_toStartOf="@+id/tvRelDateLabel"
            app:layout_constraintTop_toBottomOf="@+id/tvRelDateLabel"/>

        <TextView
            android:id="@+id/tvAvgRate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textColor="@color/colorAccent"
            app:layout_constraintBottom_toTopOf="@+id/tvAvgRateLabel"
            app:layout_constraintStart_toEndOf="@+id/tvAvgRateLabel"
            app:layout_constraintTop_toBottomOf="@+id/tvAvgRateLabel"
            tools:text="9.3/10"/>

        <TextView
            android:id="@+id/tvSynopsisLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/synopsis_label"
            android:textColor="@color/colorPrimaryDark"
            app:layout_constraintStart_toStartOf="@+id/ivPoster"
            app:layout_constraintTop_toBottomOf="@+id/ivPoster"/>

        <TextView
            android:id="@+id/tvSynopsis"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            android:textColor="@color/colorAccent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/tvSynopsisLabel"
            app:layout_constraintTop_toBottomOf="@+id/tvSynopsisLabel"
            tools:text="Bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla"/>

        <ImageView
            android:id="@+id/imSynopsisSeparator"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:background="@color/colorPrimary"
            app:layout_constraintBottom_toTopOf="@+id/tvSynopsisLabel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tvSynopsisLabel"
            app:layout_constraintTop_toBottomOf="@+id/tvSynopsisLabel"
            app:srcCompat="@color/colorPrimaryDark"/>

        <ImageView
            android:id="@+id/ivFavorite"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:adjustViewBounds="false"
            android:clickable="true"
            android:cropToPadding="false"
            android:focusable="true"
            android:onClick="toogleFavorite"
            app:layout_constraintEnd_toStartOf="@+id/btTrailersAndReviews"
            app:layout_constraintStart_toEndOf="@+id/btTrailersAndReviews"
            app:layout_constraintTop_toBottomOf="@+id/tvAvgRate"
            app:srcCompat="@mipmap/ic_favorite_on_foreground"/>

        <Button
            android:id="@+id/btTrailersAndReviews"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:onClick="showMoreDetailsActivity"
            android:text="@string/button_more"
            android:visibility="invisible"
            android:enabled="false"
            android:textColor="@color/colorAccent"
            app:layout_constraintBottom_toBottomOf="@+id/ivPoster"
            app:layout_constraintEnd_toEndOf="parent"/>

    </android.support.constraint.ConstraintLayout>
</ScrollView>